@@ -7,6 +7,7 @@ version <next>:
 - Changed metadata print option to accept general urls
 - Alias muxer for Ogg Video (.ogv)
 - VP8 in Ogg muxing
+- curves filter doesn't automatically insert points at x=0 and x=1 anymore
 
 
 version 3.1:
